{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 167,
  "lineage": "5aeca0a2-2a3c-b8aa-0b92-42a302e4f716",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06236fe9068a02ebb",
            "arn": "arn:aws:ec2:eu-north-1:630606828181:elastic-ip/eipalloc-06236fe9068a02ebb",
            "association_id": "eipassoc-08e3beae65df90c2d",
            "domain": "vpc",
            "id": "eipalloc-06236fe9068a02ebb",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0d84768eff757cbf1",
            "private_dns": "ip-10-0-1-238.eu-north-1.compute.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-13-50-10-32.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.10.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "swms-eks-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-nat-eip",
              "Project": "group-f-swms"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:internet-gateway/igw-01f094085b474a65d",
            "id": "igw-01f094085b474a65d",
            "owner_id": "630606828181",
            "tags": {
              "Name": "swms-eks-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-igw",
              "Project": "group-f-swms"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06236fe9068a02ebb",
            "association_id": "eipassoc-08e3beae65df90c2d",
            "connectivity_type": "public",
            "id": "nat-0f86cf2e097859434",
            "network_interface_id": "eni-0d84768eff757cbf1",
            "private_ip": "10.0.1.238",
            "public_ip": "13.50.10.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f028dd145efbc053",
            "tags": {
              "Name": "swms-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-nat-gateway",
              "Project": "group-f-swms"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f692ad7eb1d1030d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f86cf2e097859434",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f692ad7eb1d1030d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:route-table/rtb-0f692ad7eb1d1030d",
            "id": "rtb-0f692ad7eb1d1030d",
            "owner_id": "630606828181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f86cf2e097859434",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swms-eks-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-private-rt",
              "Project": "group-f-swms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:route-table/rtb-0a897227465377505",
            "id": "rtb-0a897227465377505",
            "owner_id": "630606828181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f094085b474a65d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swms-eks-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-public-rt",
              "Project": "group-f-swms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011094a0d7bb98842",
            "route_table_id": "rtb-0f692ad7eb1d1030d",
            "subnet_id": "subnet-06627847e5d05a85a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e16219669aeff65",
            "route_table_id": "rtb-0f692ad7eb1d1030d",
            "subnet_id": "subnet-09832f22c9ab55222"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f875989475e7b7",
            "route_table_id": "rtb-0f692ad7eb1d1030d",
            "subnet_id": "subnet-0c506039ae585282b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0dcc7138a025059",
            "route_table_id": "rtb-0a897227465377505",
            "subnet_id": "subnet-0f028dd145efbc053"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c53597b04be668a3",
            "route_table_id": "rtb-0a897227465377505",
            "subnet_id": "subnet-02c81324ed02001f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0211262b8449f52",
            "route_table_id": "rtb-0a897227465377505",
            "subnet_id": "subnet-05dd91ae406964040"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:security-group/sg-0facd84465d3545b9",
            "description": "NAT instance - allows all traffic from VPC CIDR outbound to internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0facd84465d3545b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All inbound from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "swms-eks-dev-nat-sg",
            "name_prefix": "",
            "owner_id": "630606828181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swms-eks-dev-nat-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-nat-sg",
              "Project": "group-f-swms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:security-group/sg-0374b56c650f09835",
            "description": "Allow HTTPS from within the VPC to VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0374b56c650f09835",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "swms-eks-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "630606828181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swms-eks-dev-vpce-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-sg",
              "Project": "group-f-swms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-06627847e5d05a85a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06627847e5d05a85a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-private-1",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-private-1",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-09832f22c9ab55222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09832f22c9ab55222",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-private-2",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-private-2",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-0c506039ae585282b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c506039ae585282b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-private-3",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-private-3",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-0f028dd145efbc053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f028dd145efbc053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-public-1",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-public-1",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-02c81324ed02001f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c81324ed02001f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-public-2",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-public-2",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:subnet/subnet-05dd91ae406964040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dd91ae406964040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630606828181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swms-eks-dev-public-3",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-public-3",
              "Project": "group-f-swms",
              "kubernetes.io/cluster/swms-eks-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc/vpc-0b4ba782d6a7de24a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b442edc7435c3de2",
            "default_route_table_id": "rtb-001f9050468500712",
            "default_security_group_id": "sg-0e4f444ab93181d0c",
            "dhcp_options_id": "dopt-04ffffb393c0b21ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4ba782d6a7de24a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001f9050468500712",
            "owner_id": "630606828181",
            "tags": {
              "Name": "swms-eks-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpc",
              "Project": "group-f-swms"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc-endpoint/vpce-0bae31650a7295760",
            "dns_entry": [
              {
                "dns_name": "vpce-0bae31650a7295760-00z19fcd.ec2.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0bae31650a7295760-00z19fcd-eu-north-1a.ec2.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0bae31650a7295760-00z19fcd-eu-north-1c.ec2.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0bae31650a7295760-00z19fcd-eu-north-1b.ec2.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "ec2.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z0669081F8I9BJM4C9ZK"
              },
              {
                "dns_name": "ec2.eu-north-1.api.aws",
                "hosted_zone_id": "Z06692281Q4GXAKUQAATJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bae31650a7295760",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-015f927e107dfc89c",
              "eni-09ecd5a885fccff2c",
              "eni-0ee7eed2ca7a97ab1"
            ],
            "owner_id": "630606828181",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0374b56c650f09835"
            ],
            "service_name": "com.amazonaws.eu-north-1.ec2",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.150",
                "subnet_id": "subnet-06627847e5d05a85a"
              },
              {
                "ipv4": "10.0.12.6",
                "subnet_id": "subnet-09832f22c9ab55222"
              },
              {
                "ipv4": "10.0.13.232",
                "subnet_id": "subnet-0c506039ae585282b"
              }
            ],
            "subnet_ids": [
              "subnet-06627847e5d05a85a",
              "subnet-09832f22c9ab55222",
              "subnet-0c506039ae585282b"
            ],
            "tags": {
              "Name": "swms-eks-dev-vpce-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-ec2",
              "Project": "group-f-swms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc-endpoint/vpce-0f69c57a0079be798",
            "dns_entry": [
              {
                "dns_name": "vpce-0f69c57a0079be798-h1frnhq1.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0f69c57a0079be798-h1frnhq1-eu-north-1c.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0f69c57a0079be798-h1frnhq1-eu-north-1a.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-0f69c57a0079be798-h1frnhq1-eu-north-1b.api.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "api.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z02294103GQMYWM9YYJXF"
              },
              {
                "dns_name": "ecr.eu-north-1.api.aws",
                "hosted_zone_id": "Z10393721O9AEFL1K2USS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f69c57a0079be798",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09e212b69316a56a9",
              "eni-0da3de82f75723025",
              "eni-0e5581d2894e00c88"
            ],
            "owner_id": "630606828181",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0374b56c650f09835"
            ],
            "service_name": "com.amazonaws.eu-north-1.ecr.api",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.248",
                "subnet_id": "subnet-06627847e5d05a85a"
              },
              {
                "ipv4": "10.0.12.127",
                "subnet_id": "subnet-09832f22c9ab55222"
              },
              {
                "ipv4": "10.0.13.236",
                "subnet_id": "subnet-0c506039ae585282b"
              }
            ],
            "subnet_ids": [
              "subnet-06627847e5d05a85a",
              "subnet-09832f22c9ab55222",
              "subnet-0c506039ae585282b"
            ],
            "tags": {
              "Name": "swms-eks-dev-vpce-ecr-api"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-ecr-api",
              "Project": "group-f-swms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc-endpoint/vpce-098d472fcd9fed997",
            "dns_entry": [
              {
                "dns_name": "vpce-098d472fcd9fed997-2p92lazd.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-098d472fcd9fed997-2p92lazd-eu-north-1a.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-098d472fcd9fed997-2p92lazd-eu-north-1b.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-098d472fcd9fed997-2p92lazd-eu-north-1c.dkr.ecr.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "dkr.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z0509895M3VHA39Q80LV"
              },
              {
                "dns_name": "*.dkr.ecr.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z0509895M3VHA39Q80LV"
              },
              {
                "dns_name": "dkr-ecr.eu-north-1.on.aws",
                "hosted_zone_id": "Z05119131J7QWODH1YQBM"
              },
              {
                "dns_name": "*.dkr-ecr.eu-north-1.on.aws",
                "hosted_zone_id": "Z05119131J7QWODH1YQBM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-098d472fcd9fed997",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003f33d049f9bfe02",
              "eni-0490a9a61fc8792af",
              "eni-0cf367d98d0a4f0e2"
            ],
            "owner_id": "630606828181",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0374b56c650f09835"
            ],
            "service_name": "com.amazonaws.eu-north-1.ecr.dkr",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.158",
                "subnet_id": "subnet-06627847e5d05a85a"
              },
              {
                "ipv4": "10.0.12.61",
                "subnet_id": "subnet-09832f22c9ab55222"
              },
              {
                "ipv4": "10.0.13.246",
                "subnet_id": "subnet-0c506039ae585282b"
              }
            ],
            "subnet_ids": [
              "subnet-06627847e5d05a85a",
              "subnet-09832f22c9ab55222",
              "subnet-0c506039ae585282b"
            ],
            "tags": {
              "Name": "swms-eks-dev-vpce-ecr-dkr"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-ecr-dkr",
              "Project": "group-f-swms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc-endpoint/vpce-0eaec6e654efcc84a",
            "cidr_blocks": [
              "52.95.170.0/23",
              "3.5.216.0/22",
              "52.95.169.0/24",
              "16.12.10.0/23",
              "16.12.9.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0eaec6e654efcc84a",
            "ip_address_type": "ipv4",
            "owner_id": "630606828181",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-c3aa4faa",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0f692ad7eb1d1030d"
            ],
            "service_name": "com.amazonaws.eu-north-1.s3",
            "service_region": "eu-north-1",
            "state": "available",
            "tags": {
              "Name": "swms-eks-dev-vpce-s3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-s3",
              "Project": "group-f-swms"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630606828181:vpc-endpoint/vpce-00dfe6961ecb7f714",
            "dns_entry": [
              {
                "dns_name": "vpce-00dfe6961ecb7f714-v8rrefjg.sts.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-00dfe6961ecb7f714-v8rrefjg-eu-north-1b.sts.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-00dfe6961ecb7f714-v8rrefjg-eu-north-1c.sts.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-00dfe6961ecb7f714-v8rrefjg-eu-north-1a.sts.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "sts.eu-north-1.amazonaws.com",
                "hosted_zone_id": "Z10388632WRUI8P4D4I3J"
              },
              {
                "dns_name": "sts.eu-north-1.api.aws",
                "hosted_zone_id": "Z0669898GJX4Z2MVFBJ6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00dfe6961ecb7f714",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-065b04131dc11c531",
              "eni-09d042d93a99bf6b7",
              "eni-0b363467f41b4a7d2"
            ],
            "owner_id": "630606828181",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0374b56c650f09835"
            ],
            "service_name": "com.amazonaws.eu-north-1.sts",
            "service_region": "eu-north-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.40",
                "subnet_id": "subnet-06627847e5d05a85a"
              },
              {
                "ipv4": "10.0.12.92",
                "subnet_id": "subnet-09832f22c9ab55222"
              },
              {
                "ipv4": "10.0.13.56",
                "subnet_id": "subnet-0c506039ae585282b"
              }
            ],
            "subnet_ids": [
              "subnet-06627847e5d05a85a",
              "subnet-09832f22c9ab55222",
              "subnet-0c506039ae585282b"
            ],
            "tags": {
              "Name": "swms-eks-dev-vpce-sts"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "swms-eks-dev-vpce-sts",
              "Project": "group-f-swms"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b4ba782d6a7de24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "swms",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "id": "auth",
            "metadata": [
              {
                "annotations": {
                  "description": "Keycloak, Vault, OPA"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "auth",
                "resource_version": "116157",
                "uid": "de9f6e4d-250b-41f1-8fcd-1b44cc1d4a42"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "auth"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "blockchain",
          "schema_version": 0,
          "attributes": {
            "id": "blockchain",
            "metadata": [
              {
                "annotations": {
                  "description": "Hyperledger Fabric peer, orderer, CA"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "blockchain",
                "resource_version": "116155",
                "uid": "5d23fdc4-e7d1-4c41-831e-7749023aa1cc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "blockchain"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "cicd",
          "schema_version": 0,
          "attributes": {
            "id": "cicd",
            "metadata": [
              {
                "annotations": {
                  "description": "Argo CD, Chaos Mesh, k6"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "cicd",
                "resource_version": "116174",
                "uid": "9db71217-a5ac-45ef-bdf6-5fa09b6cb830"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "cicd"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "gateway",
          "schema_version": 0,
          "attributes": {
            "id": "gateway",
            "metadata": [
              {
                "annotations": {
                  "description": "Kong API gateway"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "gateway",
                "resource_version": "116154",
                "uid": "bf18408a-61c4-460d-a8f9-3c45802fc2ef"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "gateway"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "messaging",
          "schema_version": 0,
          "attributes": {
            "id": "messaging",
            "metadata": [
              {
                "annotations": {
                  "description": "Kafka, EMQX"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "messaging",
                "resource_version": "116173",
                "uid": "b137596e-d0f4-400c-b174-391a42510783"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "messaging"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "annotations": {
                  "description": "Prometheus, Grafana, ELK, Jaeger"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "monitoring",
                "resource_version": "116156",
                "uid": "ea8d810f-ce8a-43ab-8775-eb371fb47832"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "waste-dev",
          "schema_version": 0,
          "attributes": {
            "id": "waste-dev",
            "metadata": [
              {
                "annotations": {
                  "description": "F2 + F3 application services (development)"
                },
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "waste-dev",
                "resource_version": "116153",
                "uid": "4fdaed67-d474-481d-88a1-8caecb9f6622"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "waste-dev"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        },
        {
          "index_key": "waste-prod",
          "schema_version": 0,
          "attributes": {
            "id": "waste-prod",
            "metadata": [
              {
                "annotations": {
                  "description": "F2 + F3 application services (production)"
                },
                "generation": 0,
                "labels": {
                  "environment": "prod",
                  "managed-by": "f4-platform",
                  "project": "group-f-swms"
                },
                "name": "waste-prod",
                "resource_version": "116170",
                "uid": "dceb8f7a-2133-414d-83e0-afbfcaf70de9"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "waste-prod"
          },
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_eks_node_group.main",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.eks_nodes",
            "aws_iam_role_policy_attachment.ebs_csi",
            "aws_iam_role_policy_attachment.ecr_read_only",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_cni_policy",
            "aws_iam_role_policy_attachment.eks_worker_node",
            "aws_route_table.private",
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.ecr_api",
            "aws_vpc_endpoint.ecr_dkr",
            "aws_vpc_endpoint.s3",
            "aws_vpc_endpoint.sts",
            "data.aws_eks_cluster.main",
            "data.aws_eks_cluster_auth.main"
          ]
        }
      ]
    }
  ]
}